# AvP-Gold-Vita

./: .gitignore  CMakeLists.txt
.github/: FUNDING.yml
sce_sys/livearea/contents/: template.xml
shaders/: default_f.cg  default_v.cg  no_color_no_discard_f.cg  no_color_v.cg  no_discard_f.cg  no_secondary_f.cg  no_secondary_no_discard_f.cg  no_secondary_v.cg  no_texture_f.cg  no_texture_v.cg
src/: bink.c  files.c  fixer.h  fmv.c  main.c  menus.c  nxlink.c  oglfunc.c  oglfunc.h  openal.c  opengl.c  stubs.c  winapi.c  winfiles.c
src/avp/: bh_agun.c  bh_agun.h  bh_corpse.c  bh_corpse.h  bh_fhug.c  bh_fhug.h  bh_marin.c  bh_pargen.c  bh_pargen.h  bh_pred.c  bh_pred.h  bh_queen.c  bh_queen.h  bh_snds.c  bh_snds.h  bh_swdor.c  bh_swdor.h  bh_types.c  bh_types.h  bh_weap.c  bh_weap.h  bh_xeno.c  bh_xeno.h  hmodel.c  hmodel.h  player.c  psnd.c  savegame.h  track.c  track.h
src/avp/win95/: progress_bar.cpp  psndplat.h  usr_io.c
src/avp/win95/frontend/: avp_menus.c
src/shaders/: default_f.h  default_v.h  no_color_no_discard_f.h  no_color_v.h  no_discard_f.h  no_secondary_f.h  no_secondary_no_discard_f.h  no_secondary_v.h  no_texture_f.h  no_texture_v.h
src/win95/: awtexld.cpp  chnktexi.cpp  list_tem.hpp  media.hpp
